# sfml-framework

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CustomTextureGenerator.cpp  Playground.cpp  library.h  main.cpp
docs/: Doxyfile
examples/: Resources.cpp  SpriteSheets.cpp
include/: Animator.hpp  EventBroker.hpp  Particle.hpp  ParticleSystem.hpp  Resource.hpp  ResourceHolder.h  ResourceHolder.hpp  ResourceLoader.hpp  ResourceManager.h  ResourceManager.hpp  SFMLResourceLoader.hpp  Sprite.hpp  SpriteSheet.hpp  SpriteSheetLoader.hpp  TextureResource.hpp
src/: Animator.cpp  CMakeLists.txt  Particle.cpp  ParticleSystem.cpp  ResourceManager.cpp  Sprite.cpp  SpriteSheet.cpp  TextureResource.cpp
